# desafio-sonar-cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  IHM_ANALYSIS.md  THREADS_vs_PROCESSES.md
include/: shared_buffer.hpp  shared_memory.hpp  signal_params.hpp  signal_source.hpp  sine_generator.hpp  sonar_window.hpp  wav_file_source.hpp
src/: control_app.cpp  generator_app.cpp  ihm_viewer.cpp  shared_memory.cpp  sine_generator.cpp  sonar_window.cpp  wav_file_source.cpp
